<resources>
    <string name="app_name">Clock Check</string>
    <string name="app_title">Clock Check</string>
    <string name="wey_contexto">Contexto</string>
    <string name="button_siguiente">Siguiente</string>

    <string name="selection_title_text">Selecciona una de las dos opciones:</string>
    <string name="patron_text">Crear una nueva Base de Datos</string>
    <string name="empleado_text">Unirse a una Base de Datos ya existente</string>
    <string name="button_patron">Crear</string>
    <string name="button_empleado">Unirse</string>
    <string name="title_activity_registrarme_clock">RegistrarmeClockActivity</string>
    <string name="title_activity_administrador">ActivityAdministrador</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>